# gamie

./: .cursorignore  .gitignore  docker-compose.yml  realtracker  realtracker.txt
.specstory/history/: accessing-mongodb-and-troubleshooting.md  backend-setup-for-multiplayer-game.md  cleaning-up-git-repository-with-gitignore.md  debugging-login-and-authorization-issues.md  docker-compose-image-pull-issues.md  dockerfile-flickering-services-troubleshooting.md  feedback-section-implementation-for-navbar.md  fixing-dicebear-api-profile-picture-error.md  fixing-docker-compose-for-rust-compatibility.md  fixing-docker-desktop-issues-on-debian.md  fixing-docker-rust-version-compatibility.md  fixing-nested-git-repository-issues.md  fixing-profile-page-redirect-issue.md  fixing-typescript-and-vite-configuration-errors.md  fixing-typescript-errors-in-vite-and-svelte.md  game-room-development-steps-and-structure.md  hiding-navbar-on-game-route.md  implementing-frontend-authorization-in-svelte.md  login-and-authorization-troubleshooting.md  mvp-game-social-app-project-planning.md  optimizing-premium-content-for-mobile.md  profile-page-access-issue.md  profile-simplification-for-mvp.md  (+8 more)
backend/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev
frontend/: vite.config.ts
gamie-backend/: Cargo.toml  Dockerfile.dev  docker-compose.yml
gamie-backend/src/: config.rs  error.rs  main.rs
gamie-backend/src/game/: mod.rs  models.rs  routes.rs  state.rs  ws.rs
gamie-backend/src/models/: user.rs
gamie-backend/src/user/: handlers.rs  routes.rs
gamie-frontend/: package.json
(+40 files in other folders)
