[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-ws = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
mongodb = "2.8"
argon2 = "0.5"
validator = { version = "0.16", features = ["derive"] }
dotenv = "0.15"
futures = "0.3"
thiserror = "1.0"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
actix-governor = "0.4"
sanitize_html = "0.7"
jsonwebtoken = "9.2.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8" 